src/test/contracts/negative/contract_storage_do_not_match.jsligo
namespace IncDec {
  type storage = [nat,nat];
  @entry
  const increment = (delta : int, store : int) : [list<operation>, int] =>
    [list([]), store + delta];

  @entry
  const decrement = (delta : int, store : int) : [list<operation>, int] =>
    [list([]), store - delta];
};
